--- a/style.css
+++ b/style.css
@@ -17,3 +17,18 @@ h1{
   color: blue;
   font-size: 18pt;
 }
+
+header{
+  font-size: 40pt;
+  color: purple;
+}
+
+body{
+  color: pink;
+  font-size: 18pt;
+}
+
+footer{
+  color: purple;
+  font-size: 20pt;
+}
